# progkonf2022

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc
custom/: CMakeLists.txt  magic_vmc.cpp  typeid.hxx  visitable_as.hxx  visitable_hierarchy.hxx  visitor.hxx  visitor_base.hxx
dynamic_cast/: CMakeLists.txt  magic_dtc.cpp  visitable_as.hxx  visitable_hierarchy.cxx  visitable_hierarchy.hxx  visitor.hxx  visitor_base.cxx  visitor_base.hxx
prezentáció/: Models.mdj  Típushelyes cachelés.pptx
type_info/: CMakeLists.txt  magic_vtc.cpp  visitable_as.hxx  visitable_hierarchy.hxx  visitor.hxx  visitor_base.hxx
user-code/: base.hxx  derived_A.hxx  derived_B.hxx  derived_C.hxx  main.cxx
